package org.firstinspires.ftc.teamcode.movement;

/**
 *      Class of constants used in the movement process.
 */

public class Constants {

    static final double POWER_HIGHER_LIMIT = 0.7;
    static final double ROTATION_POWER_AUTONOMOUS = 0.2;
    static final double CORRECTION_POWER = 0.2;
    public static final double TICKS_PER_CM = 17.96;
    static final Power ROTATION_POWER_TELEOP = new Power(0.75);
}
