package org.firstinspires.ftc.teamcode.movement;

/**
 *       Class of direction codes used in the movement process.
 */

public class DirectionCodes {
    public static final int FORWARD = 0;
    public static final int BACKWARD = 1;
    public static final int RIGHT = 2;
    public static final int LEFT = 3;
}
