@startuml

title __MOVEMENT's Class Diagram__\n

  package org.firstinspires.ftc.teamcode {
    package org.firstinspires.ftc.teamcode.movement {
      class AnglesList {
          - SIZE_LIMIT : int
          - ERROR : double
          + AnglesList()
          + add()
          + stayedConstant()
      }
    }
  }
  

  package org.firstinspires.ftc.teamcode {
    package org.firstinspires.ftc.teamcode.movement {
      class AsympthoticalPower {
          - direction : int
          + count : int
          - targetPower : double
          - BASE_POWER : double
          - actualPower : double
          - RESET_AFTER : int
          + AsympthoticalPower()
          + setDirection()
          + getPower()
          + setNewTargetPower()
      }
    }
  }
  

  package org.firstinspires.ftc.teamcode {
    package org.firstinspires.ftc.teamcode.movement {
      class Constants {
          {static} ~ POWER_HIGHER_LIMIT : double
          {static} ~ ROTATION_POWER_AUTONOMOUS : double
          {static} ~ CORRECTION_POWER : double
          {static} + TICKS_PER_CM : double
          {static} ~ ROTATION_POWER_TELEOP : Power
      }
    }
  }
  

  package org.firstinspires.ftc.teamcode {
    package org.firstinspires.ftc.teamcode.movement {
      class DirectionCodes {
          {static} + FORWARD : int
          {static} + BACKWARD : int
          {static} + RIGHT : int
          {static} + LEFT : int
      }
    }
  }
  

  package org.firstinspires.ftc.teamcode {
    package org.firstinspires.ftc.teamcode.movement {
      class MoveWithGyro {
          + imu : BNO055IMU
          - lastAngle : Orientation
          - correctionPower : double
          - rotationPower : double
          - telemetryLogger : Telemetry
          - opMode : LinearOpMode
          - correctPosition : boolean
          + MoveWithGyro()
          + setMovementPower()
          - move()
          + moveForward()
          + moveBack()
          + moveRight()
          + moveLeft()
          - moveAutonomous()
          + moveForwardAutonomous()
          + moveBackAutonomous()
          + moveRightAutonomous()
          + moveLeftAutonomous()
          - getAngleDiff()
          + resetAngle()
          - getCurrentAngle()
          + correctPosition()
          + stopAll()
          + spinAutonomous()
          + spin()
          - cmToTicks()
          + turnCorrectionOnOff()
      }
    }
  }
  

  package org.firstinspires.ftc.teamcode {
    package org.firstinspires.ftc.teamcode.movement {
      class MovementMotors {
          - FR : DcMotor
          - FL : DcMotor
          - BR : DcMotor
          - BL : DcMotor
          - telemetryLogger : Telemetry
          + MovementMotors()
          + setMode()
          + setTargetPosition()
          + setPower()
          + allBusy()
      }
    }
  }
  

  package org.firstinspires.ftc.teamcode {
    package org.firstinspires.ftc.teamcode.movement {
      class Power {
          + FR : double
          + FL : double
          + BR : double
          + BL : double
          + Power()
          + Power()
          + Power()
          + Power()
          + multiply()
      }
    }
  }
  

  package org.firstinspires.ftc.teamcode {
    package org.firstinspires.ftc.teamcode.movement {
      class Signs {
          {static} ~ FORWARD : Power
          {static} ~ BACKWARD : Power
          {static} ~ RIGHT : Power
          {static} ~ LEFT : Power
          {static} ~ ROTATE_LEFT : Power
          {static} ~ ROTATE_RIGHT : Power
      }
    }
  }
  

  AnglesList -up-|> ArrayList
  MoveWithGyro o-- AsympthoticalPower : movementPower
  MoveWithGyro o-- MovementMotors : movementMotors
  MovementMotors o-- Power : WEIGHT_CORRECTIONS


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
